# Bar-tax

./: Inventory RAG Chat Demo.html
bangla-tax-rag/: .env.example  .gitignore  Dockerfile  Makefile  README.md  READMEA*.md  READMERUN.md  README_RESEARCH.md  README_inventory_current_architecture.md  TODO.md  engineering_architecture_slide.pptx  expert_pipeline_presentation.md  flow.md  full_system_test_report_2026-04-24.md  improve.md  invenadvance.md  inventory_few_shot_ab_eval_2026-04-26.md  learn_image.md  learn_memory.md  learning.md  learningmemory.md  memorylearn.md  memorytodo.md  mvp.md  pipeline.md  presentation.md  pyproject.toml  query_flow_readme.md  readme_exec.md  readme_futurework.md  readme_ocr_uncertainty.md  readme_theory.md  readmebanglatax.md  readmefullbuildtheory.md  readmetheory.md  requirements.txt  research.md  run   run commands.md  run.md  (+15 more)
bangla-tax-rag/.runtime/: backend-4837.pid  backend-5555.pid  backend-lereve-4850.pid  backend-lereve-4858.pid
bangla-tax-rag/app/: main.py
bangla-tax-rag/config/: ablation.yaml  boundary_handoff.yaml  boundary_templates.yaml  config.dev.yaml  config.experiment.yaml
bangla-tax-rag/data/: identity.sqlite
bangla-tax-rag/docs/: architecture.md  conversation_layer_architecture.md  dataset.md  experiments.md  full_inventory_chatbot_build_prompt.md  inventory_image_schema.md  inventory_pipeline_tree_7_slide_deck.pptx  inventory_rag_pipeline_engineering_7_slides.pptx  methodology.md  related_work.md
bangla-tax-rag/evaluation/: boutique_inventory_multilingual_qa_set.md  commerce_questions.jsonl  (+11 more)
(+497 files in other folders)
