[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bangla-tax-rag"
version = "0.1.0"
description = "Research-ready scaffold for Bangla tax RAG experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "PyYAML==6.0.2",
    "streamlit==1.44.1",
    "pdfplumber==0.11.5",
    "PyMuPDF==1.25.5",
    "pymupdf4llm==0.0.27",
    "rank-bm25==0.2.2",
    "numpy>=2,<3",
    "torch>=2,<3",
    "transformers>=4.57,<6",
    "faiss-cpu>=1.13,<2",
    "elasticsearch>=8,<9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
